# mf_attendance-rs

./: Cargo.toml  README.md  build.rs
src/: api.rs  api_token.rs  app.rs  exit_codes.rs  main.rs  prompt.rs  subcommand.rs
